Контракт API 1.1.0: новые коды ошибок
